# gouge

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  MANIFEST.in  README.rst  fabfile.py  pyproject.toml  setup.py
.devcontainer/: devcontainer.json  init.bash
.github/actions/run-tests/: Dockerfile  entrypoint.sh
.github/actions/setup-env/: Dockerfile  entrypoint.sh
.github/workflows/: main.yml
chisel/: colourcli.py  parseable.py
docs/: Makefile  api.rst  changelog.rst  conf.py  index.rst
gouge/: __init__.py  colourcli.py  filters.py  parseable.py  version.txt
src/gouge/: colourcli.py  filters.py  parseable.py  preformatters.py
test/: test_caplog.py  test_coloring.py  test_colourcli.py  test_preformatter.py  test_shifting_filter.py
