[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gouge"
version = "2.2"
authors = [
    {name = "Michel Albert", email = "michel@albert.lu"},
]
description = "Collection of logging formatters."
readme = "README.rst"
requires-python = ">=3.7"
license = {text = "BSD-3-Clause"}
classifiers = [
        "Development Status :: 4 - Beta",
        "Environment :: Console",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 2",
        "Programming Language :: Python :: 3",
        "Topic :: Other/Nonlisted Topic",
        "Topic :: Software Development :: Libraries",
        "Topic :: System :: Logging",
]
dependencies = [
    "colorama",
]

[project.urls]
Repository = "https://github.com/exhuma/gouge"

[project.optional-dependencies]
dev = [
    "furo",
    "types-colorama",
]
test = [
    "pytest"
]

[tool.black]
line_length = 80

[tool.isort]
profile = "black"
line_length = 80
virtual_env = "env"
